<resources>
    <string name="app_name">EthelonStartup</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="no_account_yet_sign_up">No account yet? Sign up.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="user_name">username</string>
    <string name="userName">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">E-mail</string>

    <!--<string name="facebook_app_id">1951152978496345</string>-->
    <!--<string name="fb_login_protocol_scheme">fb1951152978496345</string>-->

    <string name="facebook_app_id">174507703105051</string>
    <string name="fb_login_protocol_scheme">fb174507703105051</string>


    <string name="facebook_name">facebook name</string>
    <string name="profile">Profile</string>
    <string name="portfolio">Portfolio</string>
    <string name="profile_name">Profile name</string>
    <string name="address">address</string>
    <string name="log_out">Log out</string>
    <string name="skills_interests">skills and interests</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="host_badge" translatable="false">HOST</string>
    <string name="volunteers_count_badge" translatable="false">VOLUNTEERS</string>
    <string name="points_badge" translatable="false">POINTS</string>
    <string name="from_badge" translatable="false">DATE</string>
    <string name="to_badge" translatable="false">LOCATION</string>
    <string name="delivery_date_badge" translatable="false">CONTACT</string>
    <string name="deadline_badge" translatable="false">EVENT TYPE</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_foundation__main">Foundation_Main</string>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">50</string>

    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>


    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>


    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="android_adding_tabs_using_tablayout_tablayout_android_material_design_support_library_tutorial">Android: Adding Tabs using TabLayout. TabLayout Android Material Design Support Library Tutorial</string>
    <string name="android_tabs_tablayout_tutorial">Android Tabs/TabLayout Tutorial</string>
    <string name="material_design_example_using_tablayout">Material Design Example Using TabLayout</string>
    <string name="Ethelon">Ethelon</string>>
    <string name="first_layout">first layout</string>
    <string name="next_step">Next Step</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="EthelnStartup">Ethelon Startup</string>
    <string name="EthelonStartup">Ethelon Startup</string>
    <string name="done">done</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="environmentalist_badge">Environmentalist Badge</string>
    <string name="add_new_image">Add new image</string>
    <string name="interested_in">Interested in</string>
    <string name="profile_email">profile email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_maps">Map</string>
</resources>
