<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_layout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_second_layout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_third_layout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Skill Preferences" />

        <item
            android:id="@+id/logOutButton"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/log_out" />

    </group>





</menu>
