<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8f8f8"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/collapse1"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#fff"
                android:paddingBottom="8dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9"
                android:layout_marginBottom="15dp"
                android:clipToPadding="false">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false">

                    <ImageView
                        android:fitsSystemWindows="true"
                        android:id="@+id/coverPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:background="#c62828"
                        app:layout_collapseMode="parallax"
                        android:scaleType="centerCrop" />



                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePictureProfile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="21dp"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#fff"
                        app:civ_border_width="3dp"
                        app:layout_behavior="saulmm.myapplication.AvatarImageBehavior"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="21dp"
                        android:layout_alignParentLeft="true" />

                    <GridView
                        android:id="@+id/gridViewBadges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/editProfileBtn"
                        android:layout_toEndOf="@+id/profilePictureProfile"
                        android:layout_toRightOf="@+id/profilePictureProfile"
                        android:layout_toStartOf="@+id/editProfileBtn"
                        android:gravity="center"
                        android:horizontalSpacing="2dp"
                        android:layout_marginStart="8dp"
                        android:numColumns="8"
                        android:stretchMode="columnWidth"
                        tools:ignore="RtlHardcoded"
                        android:layout_toLeftOf="@+id/editProfileBtn"
                        android:layout_marginLeft="8dp" />


                    <Button
                        android:layout_width="120dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="5dp"
                        android:padding="3dp"
                        android:id="@+id/editProfileBtn"
                        android:textStyle="bold"
                        android:textColor="#c62828"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/edit_profile_btn"
                        android:text="@string/edit_profile"
                        android:layout_below="@id/coverPhoto"
                        android:layout_marginRight="8dp"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/profileNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="#000"
                    android:layout_marginStart="24dp"
                    android:text="@string/profile_name"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="24dp" />

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#808080"
                    android:id="@+id/profileEmail"
                    android:layout_marginStart="24dp"
                    android:text="@string/profile_email"
                    android:layout_marginLeft="24dp" />



                <!--<TextView-->
                <!--android:layout_marginTop="4dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="24dp"-->
                <!--android:text="Interested"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:layout_below="@+id/textView6"-->
                <!--android:id="@+id/tex" />-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2"
                    android:layout_marginLeft="24dp">
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#808080"
                        android:text="@string/interested_in"
                        android:id="@+id/interests" />
                    <GridView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@id/gridView"
                        android:numColumns="8"
                        android:layout_marginStart="6dp"
                        android:horizontalSpacing="5dp"
                        android:stretchMode="columnWidth"
                        android:gravity="center"
                        android:layout_marginLeft="6dp">
                    </GridView>



                </LinearLayout>

            </LinearLayout>
            <include
                android:id="@+id/nav_toolbar"
                layout="@layout/toolbar_custom_layout" />
        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout

            android:id="@+id/achievementsTab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:tabMode="fixed"
            app:tabSelectedTextColor="#C62828"
            app:tabTextColor="#808080"
            app:tabGravity="fill"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax"
            />
    </android.support.design.widget.AppBarLayout>




    <android.support.v4.view.ViewPager
        android:background="#f8f8f8"
        android:id="@+id/viePagerDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>



</android.support.design.widget.CoordinatorLayout>