<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8f8f8"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/collapse1"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#fff"
                android:paddingBottom="8dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9"
                android:layout_marginBottom="15dp"
                android:clipToPadding="false">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false">

                    <ImageView
                        android:fitsSystemWindows="true"
                        android:id="@+id/coverPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:background="#c62828"
                        app:layout_collapseMode="parallax"
                        android:scaleType="centerCrop" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="21dp"
                        android:layout_marginStart="21dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePictureProfile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#fff"
                        app:civ_border_width="3dp"
                        />

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/environmentCheck"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="#80000000"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_new_image"
                            android:textSize="12sp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <Button
                        android:layout_width="120dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="5dp"
                        android:padding="3dp"
                        android:id="@+id/editProfileBtn"
                        android:textStyle="bold"
                        android:textColor="#c62828"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/edit_profile_btn"
                        android:text="Save profile"
                        android:layout_below="@id/coverPhoto"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <EditText
                    android:textStyle="bold"
                    android:id="@+id/profileNameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="#000"
                    android:layout_marginLeft="24dp"
                    android:hint="@string/profile_name"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_marginLeft="24dp"
                    android:text="@string/skills_interests"
                    android:layout_below="@+id/profileNameProfile"
                    android:id="@+id/textView6" />

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Cebu City, Central Visayas"
                    android:paddingBottom="10dp"
                    android:layout_below="@+id/textView6"
                    android:id="@+id/tex" />

            </LinearLayout>
            <include
                android:id="@+id/nav_toolbar"
                layout="@layout/toolbar_custom_layout" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >


    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>